# municipal-finance-viewer-app

./: .gitignore  README.md
backend/: pyproject.toml
backend/core/: settings.py  urls.py
backend/designer/: api.py  models.py
backend/designer/lib/: cross_section_prompt_builder.py
backend/finance_viewer/: api.py  apps.py  fake_finance_modeller.py  models.py  schemas.py  urls.py
backend/finance_viewer/lib/: finance.py  gis.py  parcels.py  state_utils.py
backend/finance_viewer/migrations/: 0001_initial.py  0002_stateboundary.py  0003_municipalboundaries_municipalfinances_municipalities_and_more.py
backend/finance_viewer/models/: gis_boundaries.py  municipal_finance.py
backend/main/: api.py  auth.py  models.py  schemas.py
backend/main/migrations/: 0001_initial.py  0002_customuser_subscription_tier_and_more.py
frontend/: index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend-react/: tsconfig.app.json
frontend-react/src/: index.css
frontend-react/src/components/: navbar.tsx
frontend-react/src/hooks/: password-validator.ts
frontend-react/src/http/: api.ts
frontend-react/src/lib/: queryClient.ts
frontend-react/src/pages/: home.tsx  profile.tsx  register.tsx
frontend-react/src/store/: types.ts
frontend/app/components/: NavBar.vue
frontend/app/middleware/: auth.ts
frontend/app/pages/: financial.vue  index.vue  login.vue  register.vue
frontend/app/plugins/: piniaPersist.ts
frontend/app/stores/: auth.ts  finance.ts  frames.ts
frontend/src/: App.tsx
frontend/src/components/: navbar.tsx
(+58 files in other folders)
